--- a/manifest.json
+++ b/manifest.json
@@ -1,31 +1,36 @@
 {
-"manifest_version": 3,
-"name": "So You Think You Can Be The Reply Guy",
-"version": "2.7.0",
-"description": "Count replies on X and roast you like a certified Reply Guy if you try to dip before reaching your quota.",
-"permissions": [
-"storage",
-"tabs",
-"activeTab",
-"scripting"
-],
-"host_permissions": [
-"*://*.x.com/*",
-"*://*.twitter.com/*"
-],
-"action": {
-"default_title": "So You Think You Can Be The Reply Guy",
-"default_popup": "options.html"
-},
-"background": {
-"service_worker": "service_worker.js"
-},
-"content_scripts": [
-{
-"matches": ["*://*.x.com/*", "*://*.twitter.com/*"],
-"js": ["content_script.js"],
-"run_at": "document_idle"
-}
-],
-"options_page": "options.html"
+  "manifest_version": 3,
+  "name": "So You Think You Can Be The Reply Guy",
+  "version": "3.0.0",
+  "description": "Counts replies on X. Roasts you via notifications if you switch tabs before hitting your quota. Auto-resets daily.",
+  "permissions": [
+    "storage",
+    "tabs",
+    "notifications",
+    "alarms"
+  ],
+  "host_permissions": [
+    "*://*.x.com/*",
+    "*://*.twitter.com/*"
+  ],
+  "action": {
+    "default_title": "So You Think You Can Be The Reply Guy",
+    "default_popup": "options.html"
+  },
+  "background": {
+    "service_worker": "service_worker.js"
+  },
+  "content_scripts": [
+    {
+      "matches": [
+        "*://*.x.com/*",
+        "*://*.twitter.com/*"
+      ],
+      "js": [
+        "content_script.js"
+      ],
+      "run_at": "document_idle"
+    }
+  ],
+  "options_page": "options.html"
 }
