--- a/manifest.json
+++ b/manifest.json
@@ -13,9 +13,19 @@
     "*://*.x.com/*",
     "*://*.twitter.com/*"
   ],
+  "icons": {
+    "16": "icon.png",
+    "48": "icon.png",
+    "128": "icon.png"
+  },
   "action": {
     "default_title": "So You Think You Can Be The Reply Guy",
-    "default_popup": "options.html"
+    "default_popup": "options.html",
+    "default_icon": {
+      "16": "icon.png",
+      "48": "icon.png",
+      "128": "icon.png"
+    }
   },
   "background": {
     "service_worker": "service_worker.js"
