Fix: Add missing checkMilestone function to fix reply counting bug

--- a/manifest.json
+++ b/manifest.json
@@ -47,7 +47,8 @@
         "*://*/*"
       ],
       "js": [
-        "roast_popup.js"
+        "roast_popup.js",
+        "celebration_popup.js"
       ],
       "run_at": "document_idle"
     }
